updated overall css. update qualification data

--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -1,6 +1,8 @@
-.qualification__container {
-    max-width: 768px;
-}
+/* .qualification__container { */
+
+/*    max-width: 768px; */
+
+/* } */
 
 .qualification__tabs{
     display: flex;
