--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -1,17 +1,11 @@
-/* .qualification__container { */
-
-/*    max-width: 768px; */
-
-/* } */
-
 .qualification__tabs{
     display: flex;
-    justify-content:center;
+    justify-content: center;
     margin-bottom: var(--mb-2);
 }
 
 .qualification__button {
-    font-size:var(--h3-font-size);
+    font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     color: var(--title-color);
     margin: 0 var(--mb-1);
@@ -32,8 +26,8 @@
 }
 
 .qualification__sections{
-    display:grid;
-    grid-template-columns: 0.5fr;
+    display: grid;
+    grid-template-columns: 0.8fr;
     justify-content: center;
 }
 
@@ -46,7 +40,7 @@
 }
 
 .qualification__data {
-    display:grid;
+    display: grid;
     grid-template-columns: 1fr max-content 1fr;
     column-gap: 1.5rem;
 }
@@ -54,16 +48,34 @@
 .qualification__title {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-5);
 }
 
 .qualification__subtitle {
     display: inline-block;
     font-size: var(--small-font-size);
-    margin-bottom: var(--mb-1);
+    margin-bottom: var(--mb-0-5);
+    color: var(--text-color);
 }
 
-.qualification__calendar {
+.qualification__calendar-location {
+    display: flex;
+    justify-content: space-between;
     font-size: var(--small-font-size);
+    color: var(--text-color-light);
+    margin-bottom: var(--mb-0-75);
+}
+
+.qualification__company-desc {
+    font-size: var(--small-font-size);
+    color: var(--text-color);
+    margin-bottom: var(--mb-0-75);
+    font-style: italic;
+}
+
+.qualification__gpa {
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
 }
 
 .qualification__rounder {
@@ -79,5 +91,89 @@
     width: 1px;
     height: 100%;
     background-color: var(--text-color);
-    transform: translate(6px , -7px);
+    transform: translate(6px, -7px);
+}
+
+.qualification__bullet-list {
+    padding-left: 1.2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.qualification__bullet-list li {
+    font-size: var(--small-font-size);
+    color: var(--text-color);
+    margin-bottom: 0.5rem;
+    line-height: 1.4;
+}
+
+.qualification__tech {
+    margin-top: 0.75rem;
+}
+
+.qualification__tech-title {
+    font-weight: var(--font-medium);
+    color: var(--title-color);
+    font-size: var(--small-font-size);
+    display: block;
+    margin-bottom: 0.5rem;
+}
+
+.qualification__tech-items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.qualification__tech-item {
+    background-color: rgb(0 0 0 / 6%);
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+    font-size: var(--smaller-font-size);
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+}
+
+/* Media queries for responsiveness */
+@media screen and (width <= 992px) {
+    .qualification__sections {
+        grid-template-columns: 0.85fr;
+    }
+}
+
+@media screen and (width <= 768px) {
+    .qualification__sections {
+        grid-template-columns: 0.9fr;
+    }
+
+    .qualification__data {
+        gap: 1rem;
+    }
+
+    .qualification__calendar-location {
+        flex-direction: column;
+        gap: 0.25rem;
+    }
+}
+
+@media screen and (width <= 576px) {
+    .qualification__sections {
+        grid-template-columns: 1fr;
+    }
+
+    .qualification__data {
+        gap: 0.5rem;
+    }
+
+    .qualification__bullet-list {
+        padding-left: 1rem;
+    }
+
+    .qualification__bullet-list li {
+        font-size: var(--smaller-font-size);
+    }
+
+    .qualification__tech-items {
+        gap: 0.25rem;
+    }
 }
