--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -47,6 +47,11 @@
     color: var(--title-color-dark);
 }
 
+/* scroll-header */
+.scroll-header {
+    box-shadow: 0 -1px 4px rgb(0 0 0 / 15%);
+}
+
 /* =============== BREAKPOINTS =============== */
 @media screen and (width <= 768px) {
     .header {
