--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -18,7 +18,7 @@
     margin-bottom: var(--mb-1-5);
 }
 
-.skill__box {
+.skills__box {
     display: flex;
     justify-content: center;
     column-gap: 2.5rem;
